n8n/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: n8n
spec:
  redirectScheme:
    permanent: true
    scheme: https
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n
  namespace: n8n
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`n8n.lab.example`) || Host(`n8n.pub.example.com`)
      middlewares:
        - name: redirect-to-https
      services:
        - name: n8n
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n-secure
  namespace: n8n
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`n8n.lab.example`) || Host(`n8n.pub.example.com`)
      services:
        - name: n8n
          port: 80
  tls: {}
